--- a/app/views/lpa/v1/access.html
+++ b/app/views/lpa/v1/access.html
@@ -49,7 +49,7 @@
       {% set added %}
         <mark role="alert">
           <h3 class="govuk-notification-banner__heading">
-            {{ data['email'] or 'example' }}@leeds.gov.uk has been added to the account
+            {{ data['email']+'@leeds.gov.uk' or 'example' }} has been added to the account
           </h3>
           <p>They will receive an email with a link to the service.</p>
         </mark>
@@ -77,7 +77,12 @@
         }) }}
       {% endif %}
 
+      <h1 class="govuk-heading-l">
+        {{ title }}
+      </h1>
+{#
       {% from "moj/components/page-header-actions/macro.njk" import mojPageHeaderActions %}
+
       {{ mojPageHeaderActions({
         heading: {
           text: title,
@@ -90,11 +95,18 @@
           }
         ],
         classes: 'govuk-!-margin-bottom-6'
-      }) }}
+      }) }} #}
 
-      <p class="govuk-!-margin-bottom-6">
+      <p class="govuk-body">
         All users can add information to appeals and will receive email notifications about new appeals.
       </p>
+
+      <p class="govuk-body">
+        <a href="give-access">
+          Add a user
+        </a>
+      </p>
+
     </div>
 
     <div class="govuk-grid-column-one-half">
@@ -121,12 +133,3 @@
     </div>
   </div>
 {% endblock %}
-
-{% if data['shared'] %}
-
-{% else %}
-  {% set prototypeLinks = [{
-    href: 'access?action=newuser&shared=1',
-    text: 'User accepts an invite'}]
-  %}
-{% endif %}
