--- a/app/views/final-comments/v3/submit/final-comments.html
+++ b/app/views/final-comments/v3/submit/final-comments.html
@@ -16,19 +16,7 @@
 
   <p>If you want to add documents to support your comments, for example photographs, you can upload them in the next step.</p>
 
-  {{ govukCharacterCount({
-    name: 'final-comments',
-    id: 'final-comments',
-    value: data['final-comments'],
-    rows: '8',
-    maxwords: '3000',
-    label: {
-      html: 'What are your final comments?',
-      classes: 'govuk-label--m'
-    }
-  }) }}
-
-  <h2 class="govuk-heading-m">
+  <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
     Sensitive information
   </h2>
 
@@ -61,6 +49,18 @@
   {{ govukDetails({
     summaryHtml: 'What is sensitive information?',
     html: sensitiveHTML
+  }) }}
+
+  {{ govukCharacterCount({
+    name: 'final-comments',
+    id: 'final-comments',
+    value: data['final-comments'],
+    rows: '8',
+    maxwords: '3000',
+    label: {
+      html: 'What are your final comments?',
+      classes: 'govuk-label--m'
+    }
   }) }}
 
   {{ govukCheckboxes({
