--- a/app/views/index.html
+++ b/app/views/index.html
@@ -159,8 +159,8 @@
                     <h3 class="govuk-heading-s">
                       Final comments v3
                       {{ govukTag({
-                        classes: "govuk-tag--blue govuk-!-margin-left-1",
-                        text: "In progress"
+                        classes: "govuk-tag--green govuk-!-margin-left-1",
+                        text: "Ready for dev"
                       }) }}
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
