Updated index and renamed files for two emails

--- a/app/views/final-comments/v3/submit/final-comments.html
+++ b/app/views/final-comments/v3/submit/final-comments.html
@@ -11,11 +11,7 @@
   <h1 class="govuk-heading-l">
     Add final comments
   </h1>
-<style>.highlight {
-    background-color: yellow;
-    padding: 0 4px 3px;
-    border-radius: 12px;
-  }</style>
+
   <p>Your final comments should only respond to the statements from the <span class="highlight">((local planning authority / appellant))</span> or interested parties, and must not include any new evidence.</p>
 
   <p>If you want to add documents to support your comments, for example photographs, you can upload them in the next step.</p>
@@ -55,12 +51,11 @@
     html: sensitiveHTML
   }) }}
 
-  {{ govukCharacterCount({
+  {{ govukTextarea({
     name: 'final-comments',
     id: 'final-comments',
     value: data['final-comments'],
     rows: '8',
-    maxwords: '3000',
     label: {
       html: 'What are your final comments?',
       classes: 'govuk-label--m'
