--- a/app/views/index.html
+++ b/app/views/index.html
@@ -165,7 +165,17 @@
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <li>
-                        <a href="/final-comments/v3/submit/start-email">
+                        <a href="/final-comments/v3/submit/appellant-email">
+                          Appellant email
+                        </a>
+                      </li>
+                      <li>
+                        {# <a href="/final-comments/v3/submit/lpa-email"> #}
+                          LPA email (tbc)
+                        {# </a> #}
+                      </li>
+                      <li>
+                        <a href="/final-comments/v3/submit/final-comments">
                           Submit comments journey
                         </a>
 
@@ -179,7 +189,7 @@
                       </li>
                       <li>
                         <a href="/final-comments/v3/create-link/appeal-search">
-                          Create link journey
+                          Create link journey (should no longer be needed)
                         </a>
                       </li>
                     </ul>
@@ -3106,7 +3116,7 @@
             </div>
           </div>
 
-          <div class="govuk-accordion__section">
+          {# <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
               <h2 class="govuk-accordion__section-heading">
                 <span class="govuk-accordion__section-button" id="accordion-default-heading-finalcomments">
@@ -3184,7 +3194,7 @@
               </div>
 
             </div>
-          </div>
+          </div> #}
 
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
