--- a/app/views/index.html
+++ b/app/views/index.html
@@ -43,6 +43,26 @@
                 <div class="govuk-grid-column-full">
 
                   <div class="govuk-inset-text govuk-!-margin-top-0">
+
+                    <!-- version 2 -->
+                    <h3 class="govuk-heading-s">
+                      LPA appeals
+                      {{ govukTag({
+                        classes: "govuk-tag--red govuk-!-margin-left-1",
+                        text: "In progress"
+                      }) }}
+                    </h3>
+
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li>
+                        <a href="/lpa/v2/no-appeals?banner=show">No appeals (first time use and when there are no appeals)</a>
+                      </li>
+                      <li>
+                        <a href="/lpa/v2/appeals?appealref=">Appeals</a>
+                      </li>
+                    </ul>
+
+                    <!-- version 1 -->
                     <h3 class="govuk-heading-s">
                       LPA service invitation, manage team access
                       {{ govukTag({
