--- a/app/views/lpa/v2/appeals.html
+++ b/app/views/lpa/v2/appeals.html
@@ -105,9 +105,13 @@
             {# <a href="/lpa-questionnaire/v10/task-list?non-determination=true" class="govuk-link govuk-link--no-visited-state">
               Complete questionnaire
             </a><br> #}
+            <a href="/lpa-statement/v1/enter-code" class="govuk-link govuk-link--no-visited-state">
+              Submit statement
+            </a><br>
             <a href="/lpa-final-comments/v1/enter-code" class="govuk-link govuk-link--no-visited-state">
               Final comments
             </a>
+
           </td>
         </tr>
 
@@ -154,6 +158,9 @@
             {{ 7 | daysInFuture }}
           </td>
           <td class="govuk-table__cell">
+            <a href="/lpa-statement/v1/enter-code" class="govuk-link govuk-link--no-visited-state">
+              Submit statement
+            </a><br>
             <a href="/lpa-questionnaire/v10/task-list?non-determination=true" class="govuk-link govuk-link--no-visited-state">
               Complete questionnaire
             </a><br>
@@ -204,6 +211,9 @@
             {{ 8 | daysInFuture }}
           </td>
           <td class="govuk-table__cell">
+            <a href="/lpa-statement/v1/enter-code" class="govuk-link govuk-link--no-visited-state">
+              Submit statement
+            </a><br>
             <a href="/lpa-final-comments/v1/enter-code" class="govuk-link govuk-link--no-visited-state">
               Final comments
             </a>
@@ -226,6 +236,9 @@
             {{ 12 | daysInFuture }}
           </td>
           <td class="govuk-table__cell">
+            <a href="/lpa-statement/v1/enter-code" class="govuk-link govuk-link--no-visited-state">
+              Submit statement
+            </a><br>
             <a href="/lpa-final-comments/v1/enter-code" class="govuk-link govuk-link--no-visited-state">
               Final comments
             </a>
@@ -270,6 +283,9 @@
             {{ 20 | daysInFuture }}
           </td>
           <td class="govuk-table__cell">
+            <a href="/lpa-statement/v1/enter-code" class="govuk-link govuk-link--no-visited-state">
+              Submit statement
+            </a><br>
             <a href="/lpa-final-comments/v1/enter-code" class="govuk-link govuk-link--no-visited-state">
               Final comments
             </a>
@@ -336,6 +352,9 @@
             {{ 22 | daysInFuture }}
           </td>
           <td class="govuk-table__cell">
+            <a href="/lpa-statement/v1/enter-code" class="govuk-link govuk-link--no-visited-state">
+              Submit statement
+            </a><br>
             <a href="/lpa-final-comments/v1/enter-code" class="govuk-link govuk-link--no-visited-state">
               Final comments
             </a>
