lpa account table update

--- a/app/assets/sass/pins/tables.scss
+++ b/app/assets/sass/pins/tables.scss
@@ -2,7 +2,8 @@
 	border-bottom: none;
 }
 
-.pins-govuk-table__row--last td {
+.pins-govuk-table__row--last td,
+.pins-govuk-table__row--last th {
 	border-bottom: none;
 }
 
