--- a/app/views/lpa/v2/appeals.html
+++ b/app/views/lpa/v2/appeals.html
@@ -52,7 +52,7 @@
 
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
-          <th scope="col" class="govuk-table__header">Application number</th>
+          <th scope="col" class="govuk-table__header">Appeal reference</th>
           {# <th scope="col" class="govuk-table__header">Type of application</th> #}
           {% if data['appealref'] == true %}
             <th scope="col" class="govuk-table__header">Appeal reference</th>
@@ -105,9 +105,9 @@
             {# <a href="/lpa-questionnaire/v10/task-list?non-determination=true" class="govuk-link govuk-link--no-visited-state">
               Complete questionnaire
             </a><br> #}
-            <a href="/lpa-statement/v1/enter-code" class="govuk-link govuk-link--no-visited-state">
+            {# <a href="/lpa-statement/v1/enter-code" class="govuk-link govuk-link--no-visited-state">
               Submit statement
-            </a><br>
+            </a><br> #}
             <a href="/lpa-final-comments/v1/enter-code" class="govuk-link govuk-link--no-visited-state">
               Final comments
             </a>
@@ -158,9 +158,7 @@
             {{ 7 | daysInFuture }}
           </td>
           <td class="govuk-table__cell">
-            <a href="/lpa-statement/v1/enter-code" class="govuk-link govuk-link--no-visited-state">
-              Submit statement
-            </a><br>
+
             <a href="/lpa-questionnaire/v10/task-list?non-determination=true" class="govuk-link govuk-link--no-visited-state">
               Complete questionnaire
             </a><br>
@@ -336,7 +334,7 @@
           </td>
         </tr>
 
-        <tr class="govuk-table__row">
+        <tr class="govuk-table__row pins-govuk-table__row--last">
 
           <th scope="row" class="govuk-table__cell">
             APP/Q9999/D/21/1286912
