LPA statement first pass, some other small tweaks

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -33,6 +33,7 @@ $govuk-assets-path: '/govuk/assets/';
 @import "pins/public-guidance";
 @import "pins/prototype-only";
 @import "pins/truncate-comments";
+@import "pins/wide-service";
 
 // Restyle the accordion on the index page of the prototype to make it easier to scan for work
 .index {
