--- a/app/views/lpa/v2/access.html
+++ b/app/views/lpa/v2/access.html
@@ -10,12 +10,12 @@
 {% endblock %}
 
 {% block beforeContent %}
-  {{ govukPhaseBanner({
+  {# {{ govukPhaseBanner({
     tag: {
       text: "Beta"
     },
     html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
-  }) }}
+  }) }} #}
 
   {% if data['appeals'] == "yes" %}
     {{ govukBackLink({
