--- a/app/views/_layouts/layout-main.html
+++ b/app/views/_layouts/layout-main.html
@@ -108,6 +108,7 @@
 
 {% block bodyEnd %}
 	{% block scripts %}
+		<script src="/public/javascripts/accessible-autocomplete.min.js"></script>
 		{% include 'govuk-prototype-kit/includes/scripts.html' %}
 		{% block pageScripts %}{% endblock %}
 	{% endblock %}
