Added autocomplete and bug fix

--- a/app/views/appeal/before-you-start/v13/lpa.html
+++ b/app/views/appeal/before-you-start/v13/lpa.html
@@ -22,7 +22,7 @@
     classes: 'js-autocomplete',
     label: {
       html: title,
-      classes: 'govuk-label--xl',
+      classes: 'govuk-label--l',
       isPageHeading: true
     },
     items: lpaList,
