Removed includes and added comments to explain whats happening

--- a/app/views/_layouts/layout-pins.html
+++ b/app/views/_layouts/layout-pins.html
@@ -1,10 +1,10 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% from '_components/header/macro.njk' import appHeader %}
 {% block header %}
-{# Use the PINS header and set service name
-Add nav, remove on pages that don't need it with:
-{% set nav = false %} #}
+	{# Change the header for PINS apps, eg LPA product #}
+
+	{# Add nav, remove on pages that don't need it with:
+	{% set nav = false %} #}
 	{{ appHeader({
 		serviceName: {
 			text: serviceName
@@ -23,24 +23,4 @@ Add nav, remove on pages that don't need it with:
 			]
 		} if nav != false
 	}) }}
-{% endblock %}
-
-{% block content %}
-	<div class="govuk-grid-row">
-		<div class="govuk-grid-column-three-quarters govuk-grid-column-two-thirds-from-desktop">
-
-			<form method="post">
-
-				{% block questions %}{% endblock %}
-
-				{% block buttons %}
-					{{ govukButton({
-						text: 'Continue'
-					}) }}
-				{% endblock %}
-
-			</form>
-
-		</div>
-	</div>
 {% endblock %}
