--- a/app/views/_layouts/layout-main.html
+++ b/app/views/_layouts/layout-main.html
@@ -1,44 +1,12 @@
-{% extends 'govuk-prototype-kit/layouts/govuk-branded.html' %}
+{% extends '_layouts/layout-includes.html' %}
 
-{% from 'govuk/components/accordion/macro.njk'           import govukAccordion %}
-{% from 'govuk/components/back-link/macro.njk'           import govukBackLink %}
-{% from 'govuk/components/breadcrumbs/macro.njk'         import govukBreadcrumbs %}
-{% from 'govuk/components/button/macro.njk'              import govukButton %}
-{% from 'govuk/components/character-count/macro.njk'     import govukCharacterCount %}
-{% from 'govuk/components/checkboxes/macro.njk'          import govukCheckboxes %}
-{% from 'govuk/components/cookie-banner/macro.njk'       import govukCookieBanner %}
-{% from 'govuk/components/date-input/macro.njk'          import govukDateInput %}
-{% from 'govuk/components/details/macro.njk'             import govukDetails %}
-{% from 'govuk/components/error-message/macro.njk'       import govukErrorMessage %}
-{% from 'govuk/components/error-summary/macro.njk'       import govukErrorSummary %}
-{% from 'govuk/components/fieldset/macro.njk'            import govukFieldset %}
-{% from 'govuk/components/file-upload/macro.njk'         import govukFileUpload %}
-{% from 'govuk/components/input/macro.njk'               import govukInput %}
-{% from 'govuk/components/inset-text/macro.njk'          import govukInsetText %}
-{% from 'govuk/components/notification-banner/macro.njk' import govukNotificationBanner %}
-{% from 'govuk/components/panel/macro.njk'               import govukPanel %}
-{% from 'govuk/components/phase-banner/macro.njk'        import govukPhaseBanner %}
-{% from 'govuk/components/radios/macro.njk'              import govukRadios %}
-{% from 'govuk/components/select/macro.njk'              import govukSelect %}
-{% from 'govuk/components/skip-link/macro.njk'           import govukSkipLink %}
-{% from 'govuk/components/summary-list/macro.njk'        import govukSummaryList %}
-{% from 'govuk/components/table/macro.njk'               import govukTable %}
-{% from 'govuk/components/tabs/macro.njk'                import govukTabs %}
-{% from 'govuk/components/tag/macro.njk'                 import govukTag %}
-{% from 'govuk/components/textarea/macro.njk'            import govukTextarea %}
-{% from 'govuk/components/warning-text/macro.njk'        import govukWarningText %}
-
+{# Add the title(h1) to page title if it's set, add to each page with:
+{% set title = 'Example' %} #}
 {% block pageTitle %}
 	{{ title+' –' if title }} {{ serviceName }}
 {% endblock %}
 
-{% block header %}
-	{{ govukHeader({
-		serviceName: serviceName,
-		serviceUrl: serviceUrl or "/"
-	}) }}
-{% endblock %}
-
+{# Add the phase banner and back link to each page #}
 {% block beforeContent %}
 	{{ govukPhaseBanner({
 		tag: {
@@ -56,14 +24,18 @@
 	}) if back != false }}
 {% endblock %}
 
+{# Setup form question pages by default, override by using content block if not needed #}
 {% block content %}
 	<div class="govuk-grid-row">
 		<div class="govuk-grid-column-three-quarters govuk-grid-column-two-thirds-from-desktop">
 
+			{# Forms all post to themselves, action controlled by _routes.js in each prototype #}
 			<form method="post">
 
+				{# Use the questions block on each page without needing to add in the rest of this block #}
 				{% block questions %}{% endblock %}
 
+				{# Set default button to continue, use buttons block to override #}
 				{% block buttons %}
 					{{ govukButton({
 						text: 'Continue'
@@ -77,6 +49,10 @@
 {% endblock %}
 
 {% block footer %}
+	{# Add prototype links if set in page, use with:
+	{% set prototypeLinks = [{href: '#0', text: 'Link to this page'}] %} #}
+
+	{# Add link to Railway app if running locally #}
 	{{ govukFooter({
 		navigation: [
 			{
@@ -88,28 +64,20 @@
 				{
 					href: '/manage-prototype',
 					text: 'Manage prototype'
-				},
+				} if local,
 				{
 					href: '/manage-prototype/clear-data',
 					text: 'Clear data'
 				},
 				{
-					href: 'https://pins-appeals.herokuapp.com' + currentURL,
-					text: "View page on Heroku (opens in new tab)",
+					href: 'https://appeals-prototypes.up.railway.app' + currentURL,
+					text: "View page on Railway (opens in new tab)",
 					attributes: {
 						target: 'blank'
 					}
 				} if local
-			],
+			] | cleanArray,
 			visuallyHiddenTitle: 'Footer links'
 		}
 	}) }}
-{% endblock %}
-
-{% block bodyEnd %}
-	{% block scripts %}
-		<script src="/public/javascripts/accessible-autocomplete.min.js"></script>
-		{% include 'govuk-prototype-kit/includes/scripts.html' %}
-		{% block pageScripts %}{% endblock %}
-	{% endblock %}
 {% endblock %}
