Added jquery and moj packages, added filters, added styles, moved across LPA questionnaire

--- a/app/views/_layouts/layout-includes.html
+++ b/app/views/_layouts/layout-includes.html
@@ -29,6 +29,9 @@
 {% from 'govuk/components/textarea/macro.njk'            import govukTextarea %}
 {% from 'govuk/components/warning-text/macro.njk'        import govukWarningText %}
 
+{# Import MOJ components #}
+{% from "moj/components/multi-file-upload/macro.njk"		 import mojMultiFileUpload %}
+
 {# Import custom components #}
 {% from '_components/header/macro.njk' 									 import appHeader %}
 
