--- a/app/views/index.html
+++ b/app/views/index.html
@@ -73,7 +73,7 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a>Questionnaire</a>
+          <a href="manage/questionnaire/">Questionnaire</a>
         </li>
         <li>
           <a>Statement</a>
